@@ -25,7 +25,6 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "aiosql>=13.2,<14",
     "aiosqlite>=0.21.0,<0.22",
-    "pyperclip>=1.9.0,<1.10",
     "packaging>=24.2,<25",
     "rich-pixels>=3.0.1",
     "pillow>=11.0.0,<12",
