@@ -3,7 +3,6 @@ import json
 import random
 from pathlib import Path
 
-import pyperclip
 from ollama import Message, ResponseError
 from textual import on, work
 from textual.app import ComposeResult
@@ -396,11 +395,7 @@ class ChatItem(Widget):
 
     @on(Click)
     async def on_click(self, event: Click) -> None:
-        try:
-            pyperclip.copy(self.text)
-        except pyperclip.PyperclipException:
-            # https://pyperclip.readthedocs.io/en/latest/index.html#not-implemented-error
-            return
+        self.app.copy_to_clipboard(self.text)
         widgets = self.query(".text")
         for widget in widgets:
             widget.styles.animate("opacity", 0.5, duration=0.1)
